tests/sksl/errors/ReservedNameStatic.glsl
### Compilation failed:

error: 1: 'static' is a reserved word
int static;
    ^^^^^^
1 error
